# alir-io

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/: FUNDING.yml
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml
cmake/common/: bootstrap.cmake
cmake/windows/: helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini
src/: asio-input.cpp  asio-input.qrc  asio-manager.cpp  asio-manager.h  asio-output.cpp  asio-plugin.h  plugin-main.cpp
